rajout fontawesome icon

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -44,7 +44,7 @@
 <!--boostrap style*/ -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <!-- fontawesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 <!-- google font -->
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
@@ -169,13 +169,15 @@
 
     <div class="row">
     <div class="col-lg-4 col-md-4">
+      <i class="fa fa-cubes fa-3x" aria-hidden="true"></i>
       <h4>Frontend</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
 
+      <i class="fa fa-cloud fa-3x" aria-hidden="true" id="icon1"></i>
       <h4>Responsive</h4>
       <p>Bootstrap, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
     
-
+      <i class="fa fa-diamond fa-3x" aria-hidden="true" id="icon2"></i>
       <h4>Backend</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
 
@@ -186,12 +188,15 @@
     </div>
 
     <div class="col-lg-4 col-md-4">
+      <i class="fa fa-camera fa-3x" aria-hidden="true" id="icon3"></i>
       <h4>Product</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
 
+      <i class="fa fa-camera fa-3x" aria-hidden="true" id="icon3"></i>
       <h4>Database</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magnvel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
 
+      <i class="fa fa-camera fa-3x" aria-hidden="true" id="icon3"></i>
       <h4>Versioning system</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magnvel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
     </div>
@@ -298,7 +303,7 @@
 <div class="row" id="thumb">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
       <div class="feature2">
-        <i class="fa fa-cubes fa-3x" aria-hidden="true" id="icon1"></i>
+        <i class="fa fa-cubes fa-3x" aria-hidden="true"></i>
         <h2>Database</h2>
         <p>Nulla imperdiet, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.</p>
       </div>
