--- a/siteDemo.html
+++ b/siteDemo.html
@@ -162,7 +162,7 @@
 
       <div class="row">
       <div class="col-lg-12 col-md-12">
-        <h1>FEATURES</h1>
+        <h1>SKILLS</h1>
         <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</p>
       </div>
       </div>
