press section html et img

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -226,7 +226,7 @@
       <div class="row">
       <div class="col-lg-12 col-md-12">
 
-        <ul class="openclassrooms-logo list-inline">
+        <ul class="press-logo list-inline">
           <li class="col-lg-3 col-md-3 col-sm-3 col-xs-6"><a href="https://openclassrooms.com/course-certificates/3239689026" target="_blank"><img class="img-responsive" src="img/certifs/html.png"><p>Certificat "Créer votre site web en HTML5 et CSS3"</p></a></li>
     
           <li class="col-lg-3 col-md-3 col-sm-3 col-xs-6"><a href="https://openclassrooms.com/course-certificates/5771754531" target="_blank"><img class="img-responsive" src="img/certifs/integrer.png"><p>Certificat "Decouper et intégrer une maquette"</p></a></li>
@@ -250,14 +250,16 @@
       <div class="col-lg-12 col-md-12">
 
           <ul class="press-logo list-inline">
-          <li class="col-lg-3 col-md-3 col-sm-3 col-xs-6"><a href="#"><img class="img-responsive" src="img/logo1.png"></a></li>
-          <li class="col-lg-3 col-md-3 col-sm-3 col-xs-6"><a href="#"><img class="img-responsive" src="img/logo2.png"></a></li>
-          <li class="col-lg-3 col-md-3 col-sm-3 col-xs-6"><a href="#"><img class="img-responsive" src="img/logo3.png"></a></li>
-          <li class="col-lg-3 col-md-3 col-sm-3 col-xs-6"><a href="#"><img class="img-responsive" src="img/logo4.png"></a></li>
+          <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="Coder son application web en 10 jours, c'est possible." target="_blank"><img class="img-responsive" src="img/press/sneakr.png"><p>Coder son application web en 10 jours c'est possible</p></a></li>
+          <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="http://www.grazia.fr/article/textfugees-refugenius-la-technologie-au-service-des-migrants-809301" target="_blank"><img class="img-responsive" src="img/press/refuginius.png">
+            <p>"Textfugees, Refugenius... : la technologie au service des migrants"</p></a><p>Developpement du "Linkedin des refugiés dans le cadre du hackaton Techfugees"</p></li>
+          <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="http://www.bel7infos.eu/meet-up-culture-management-infos/" target="_blank"><img class="img-responsive" src="img/press/thinklab.png"><p>"Meet Up Culture et Management infos."</p></a><p>Intervenante dans le débat consacré à la musique digitale</p></li>
+          <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="https://www.facebook.com/believerecordings/photos/t.617651442/295885160504543/?type=3&theater" target="_blank"><img class="img-responsive" src="img/press/believe.png"><p>Musique Info Hebdo "Une journée chez Believe" Mai 2012</p></a></li>
+          <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="https://www.youtube.com/watch?v=Vp5jApr_6Qk" target="_blank"><img class="img-responsive" src="img/press/nonlieu.png"><p>Voir le court-métrage</p></a><p>Le Dauphiné Libéré Août 2006 Création d'un court-métrage en 5 jours dans le cadre du festival Nonlieu à Saint-Vincent-de-Mercuze "Katalina met en scène sa phobie des serpents"</p></li>
+          <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="#" target="_blank"><img class="img-responsive" src="img/press/believe.png"><p>Femme-geek, algorithme gagnant ?</p></a></li>
         </ul>
+        
       </div>
-
-
       </div>
 
     </div>
