rajout style press section

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -246,24 +246,89 @@
       </div>
       </div>
 
+
+      <div class="row">
+
+      <div class="col-xs-6 col-md-3">
+        <span class="press-logo list-inline" id="talk">
+        <a href="https://www.lewagon.com/fr/blog/lewagon-demoday-8" target="_blank" class="thumbnail">
+          <img class="img-responsive" src="img/press/sneakr.png" alt="sneakr">
+          <h6><em>Coder son application web en 10 jours c'est possible</em></h6>
+        </a>
+        </span>
+      </div>
+
+       <div class="col-xs-6 col-md-3">
+        <span class="press-logo list-inline" id="talk">
+        <a href="http://www.grazia.fr/article/textfugees-refugenius-la-technologie-au-service-des-migrants-809301" target="_blank" class="thumbnail">
+          <img class="img-responsive" src="img/press/refuginius.png" alt="refuginius">
+        <h6><em>Textfugees, Refugenius... : la technologie au service des migrants</h6></p>
+        <p>Developpement du "Linkedin des refugiés dans le cadre du hackaton Techfugees"</p>
+        </a>
+        </span>
+      </div>
+
+       <div class="col-xs-6 col-md-3">
+        <span class="press-logo list-inline" id="press">
+        <a href="http://www.bel7infos.eu/meet-up-culture-management-infos/" target="_blank" class="thumbnail">
+          <img class="img-responsive" src="img/press/thinklab.png" alt="thinklab">
+        <h4>Meet Up Culture et Management"</h4>
+        <p>Intervenante dans le débat consacré à la musique digitale</p>
+        </a>
+        </span>
+      </div>
+
+       <div class="col-xs-6 col-md-3">
+        <span class="press-logo list-inline" id="press">
+        <a href="https://www.facebook.com/believerecordings/photos/t.617651442/295885160504543/?type=3&theater" target="_blank" class="thumbnail">
+          <img class="img-responsive" src="img/press/believe.png" alt="believe">
+        <h4>Musique Info Hebdo</h4>
+        <p>Musique Info Hebdo "Une journée chez Believe" Mai 2012</p>
+        </a>
+        </span>
+      </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <div class="row">
       <div class="col-lg-12 col-md-12">
 
-          <ul class="press-logo list-inline">
-          <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="Coder son application web en 10 jours, c'est possible." target="_blank"><img class="img-responsive" src="img/press/sneakr.png"><p>Coder son application web en 10 jours c'est possible</p></a></li>
+          <ul class="press-logo list-inline" id="press">
+          <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="https://www.lewagon.com/fr/blog/lewagon-demoday-8" target="_blank"><img class="img-responsive" src="img/press/sneakr.png"><p>Coder son application web en 10 jours c'est possible</p></a></li>
+
+
           <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="http://www.grazia.fr/article/textfugees-refugenius-la-technologie-au-service-des-migrants-809301" target="_blank"><img class="img-responsive" src="img/press/refuginius.png">
             <p>"Textfugees, Refugenius... : la technologie au service des migrants"</p></a><p>Developpement du "Linkedin des refugiés dans le cadre du hackaton Techfugees"</p></li>
+
+
           <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="http://www.bel7infos.eu/meet-up-culture-management-infos/" target="_blank"><img class="img-responsive" src="img/press/thinklab.png"><p>"Meet Up Culture et Management infos."</p></a><p>Intervenante dans le débat consacré à la musique digitale</p></li>
+
+
           <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="https://www.facebook.com/believerecordings/photos/t.617651442/295885160504543/?type=3&theater" target="_blank"><img class="img-responsive" src="img/press/believe.png"><p>Musique Info Hebdo "Une journée chez Believe" Mai 2012</p></a></li>
+
           <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="https://www.youtube.com/watch?v=Vp5jApr_6Qk" target="_blank"><img class="img-responsive" src="img/press/nonlieu.png"><p>Voir le court-métrage</p></a><p>Le Dauphiné Libéré Août 2006 Création d'un court-métrage en 5 jours dans le cadre du festival Nonlieu à Saint-Vincent-de-Mercuze "Katalina met en scène sa phobie des serpents"</p></li>
-          <li class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="#" target="_blank"><img class="img-responsive" src="img/press/believe.png"><p>Femme-geek, algorithme gagnant ?</p></a></li>
         </ul>
-        
+
       </div>
       </div>
 
     </div>
   </div>
+</div>
 
 
   <!--   END PRESS -->
