rajout section screenshots

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -272,6 +272,47 @@
 
   <!--   END PRESS -->
 
+  <!-- SCREENSHOTS -->
+
+  <div class="screenshots">
+    <div class="container">
+
+      <div class="row">
+      <div class="col-lg-12 col-md-12">
+
+      <h1>TAKE A LOOK OF MY RECENT WORK</h1>
+      <p>View some of the screenshots from my recent work</p>
+
+      </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <img class="img-responsive" src="img/screenshots/image1.png"/>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <img class="img-responsive" src="img/screenshots/image2.png"/>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <img class="img-responsive" src="img/screenshots/image3.png"/>
+        </div>
+        </div>
+
+      </div>
+
+
+
+
+    </div>
+  </div>
+
+
+
+
+
+
+
+  <!-- END SCREENSHOTS -->
 
 
 
