rajout contact section et socials

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -300,20 +300,42 @@
         </div>
 
       </div>
-
-
-
-
     </div>
   </div>
 
+<!-- END SCREENSHOTS -->
+
+<!--   CONTACT -->
+
+<div class="contact">
+  <div class='container'>
+
+    <div class="row">
+    <div class="col-lg-12 col-md-12">
+      <h1>CONTACT ME</h1>
+
+      <ul class="list-inline">
+        <li><a href="mailto:katalina.nadasi@gmail.com" target="blank"><i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></a></li>
+        <li><a href="http://linkedin.com" target="blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a></li>
+        <li><a href="http://github.com" target="blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></li>
+
+
+      </ul>
+
+    </div>
+  </div>
+</div>
+
+
+<!--   END CONTACT -->
 
 
 
 
 
 
-  <!-- END SCREENSHOTS -->
+
+ 
 
 
 
