contact html et enlevé code inutile

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -326,262 +326,14 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col-lg-12 col-md-12">
+    <h5>Made with &nbsp;<i class="fa fa-heart" aria-hidden="true"></i><h5>
+    <h5>by<strong> Katalina Nadasi<strong></h5>
+  </div>
+</div>
 
 <!--   END CONTACT -->
-
-
-
-
-
-
-
- 
-
-
-
-
-<!-- section 1 Hi -->
-<div class="row" id="sectionHi">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  </br></br></br></br>
-  <h1 class="text-center">Bonjour. Hello.</h1>
-    <p class="text-center">Looking for someone helping you on your website and update it with some creative staff? You're on the right place. </br> Let me explain what can I do for you.</p>
-  </div>
-</div>
-
-<!-- section 2 resume -->
-<div class="row" id="section2">
-  <span class="text-center">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <h1>RESUME</h1>
-      <p>Digital strategist becomming frontend developer</p>
-  </div>
-  </span>
-</div>
-
-
-<div class="container" id="sectionResume">
-  <div class="row" id="section2row1">
-    <span class="border">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <div class="feature">
-        <h2>Refuginius / Hackaton</h2>
-        <p>March 2016</p></br>
-          <p>blablabla</p>
-        </div>
-      </div>
-    </span>
-
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <h2>Adaweek / Coding assistant</h2>
-        <p>From December 2015 until now</p></br>
-          <p>blablabla</p>
-    </div>
-  </div>
-  
-  <div class="row" id="section1row2">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <div class="feature">
-      <h2>intégration</h2>
-        <p>From Mai 2015</p></br>
-          <p>Divers projets d'intégration</p>
-      </div>
-    </div>
-    
-
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <h2>Sneakr.fr</h2>
-        <p>From April 2015 to Mai 2015</p>
-          <p>coding sdsdsdsdsdsdsdsd</p>
-    </div>
-  </div>
-  <div class="row" id="section1row3">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <div class="feature">
-      <h2>Believe Digital / Account Manager</h2>
-        <p>From to</p>
-          <p>Marketing, reporting, suivi de projet</p>
-      </div>
-    </div>
-
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <h2>ESC Dijon</h2>
-      <p>2e place des Mastère Spécialisé Management des entreprises créatives</p>
-    </div>
-  </div>
-</div>
-</div>
-
-
-
-<!-- section 3 skills -->
-<span class="text-center">
-<div class="row" id="section3">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <h1 class="text-center">SKILLS</h1>
-    <p class="text-center">blabla</p>
-  </div>
-</div>
-
-<div class="container" id="thumbStyle">
-</br></br></br>
-<div class="row" id="thumb">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
-      <div class="feature2">
-        <i class="fa fa-cubes fa-3x" aria-hidden="true"></i>
-        <h2>Database</h2>
-        <p>Nulla imperdiet, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.</p>
-      </div>
-    </div>
-
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
-      <i class="fa fa-diamond fa-3x" aria-hidden="true" id="icon2"></i>
-        <h2>Frontend</h2>
-        <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.</p>
-    </div>
-</div>
-
-</br></br></br>
-<div class="row" id="thumb">
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
-    <div class="feature2">
-        <i class="fa fa-camera fa-3x" aria-hidden="true" id="icon3"></i>
-          <h2>Backend</h2>
-          <p>Ruby et Rails, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.</p>
-    </div>
-  </div>
-
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
-    <i class="fa fa-cloud fa-3x" aria-hidden="true" id="icon1"></i>
-      <h2>Système versioning</h2>
-        <p>git et github, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum. ET MARKETING DIGITAL, présence en lignen réseaux sociaux.</p>
-  </div>
-</div>
-</br></br></br>
-</div>
-</span>
-
-<!-- section 4 work -->
-<span class="text-center">
-  <div class="row" id="section4">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <h1 class="text-center">WORK</h1>
-      <p class="text-center">blabla</p>
-    </div>
-  </div>
-</span>
-
-<span class="text-center">
-  <div class="row" id="section4row1">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <h2 class="text-center">ADAWEEK</h2>
-      <p class="text-center">blablsdsdsdsdsdsddsdsdsdsdsdsdsdsdsdsdsdsdsda</p>
-    </div>
-  </div>
-</span>
-
-<span class="text-center">
-  <div class="row" id="section4row2">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <h1 class="text-center">REFUGINIUS</h1>
-      <p class="text-center">blabla</p>
-    </div>
-  </div>
-</span>
-
-<span class="text-center">
-  <div class="row" id="section4row3">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <h1 class="text-center">SNEAKR</h1>
-      <p class="text-center">blabla</p>
-    </div>
-  </div>
-</span>
-
-<!-- Section 5 contact me -->
-
-<div class="row" id="section5">
-  <span class="text-center">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  </div>
-  </span>
-</div>
-
-<section id="two" class="wrapper style2 special">
-  <div class="inner narrow">
-      <header>
-        <h2>Get in touch</h2>
-      </header>
-        <form class="grid-form" method="post" action="#">
-          <div class="form-control narrow">
-            <label for="name">Name</label>
-            <input name="name" id="name" type="text">
-          </div>
-          <div class="form-control narrow">
-            <label for="email">Email</label>
-            <input name="email" id="email" type="email">
-          </div>
-          <div class="form-control">
-            <label for="message">Message</label>
-            <textarea name="message" id="message" rows="4"></textarea>
-          </div>
-          <ul class="actions">
-          <li><input value="Send Message" type="submit"></li>
-          </ul>
-        </form>
-    </div>
-</section>
-
-</br></br></br></br>
-
-<span class="text-center">
-  <div class="row" id="footer">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  <ul class="list-inline">
-    <li>
-      <a href="http://twitter.com">
-      <i class="fa fa-twitter fa-2x"></i>&nbsp;
-      </a>
-    </li>
-    <li>
-      <a href="http://facebook.com">
-        <i class="fa fa-facebook fa-2x"></i>&nbsp;
-      </a>
-    </li>
-    <li>
-    <a href="http://linkedin.com" target=blank>
-    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;
-    </a>
-    </li>
-    <a href="http://github.com" target="_blank">
-    <i class="fa fa-github fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;
-    </a>
-    </li>
-    <a href="#" target="_blank">
-    <i class="fa fa-mobile fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;
-    </a>
-    </li>
-    <a href="#" target="_blank">
-    <i class="fa fa-envelope-os fa-2x" aria-hidden="true"></i>
-    </a>
-  </ul>
-    </li></br>
-  </div>
-  </div>
- </span>
-
-<span class="text-center">
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <h5>Made with <strong><i class="glyphicon glyphicon-heart"></i><h5>
-    <h5>by<strong> Katalina Nadasi<strong></h5>
-</div>
-</span>
-
-
-
-
-</div>
-</div>
 
 
 <!-- jquery and boostrap for js -->
