fin rajout htlm footer etc

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -312,12 +312,12 @@
 
     <div class="row">
     <div class="col-lg-12 col-md-12">
-      <h1>CONTACT ME</h1>
+      <h1>CONTACT</h1>
 
       <ul class="list-inline">
         <li><a href="mailto:katalina.nadasi@gmail.com" target="blank"><i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></a></li>
-        <li><a href="http://linkedin.com" target="blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a></li>
-        <li><a href="http://github.com" target="blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/katalina-nadasi-5679b528?trk=hp-identity-name" target="blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a></li>
+        <li><a href="https://github.com/KatalinaNadasi" target="blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></li>
 
 
       </ul>
@@ -325,15 +325,25 @@
     </div>
   </div>
 </div>
+<!--   END CONTACT -->
 
-<div class="row">
-  <div class="col-lg-12 col-md-12">
-    <h5>Made with &nbsp;<i class="fa fa-heart" aria-hidden="true"></i><h5>
-    <h5>by<strong> Katalina Nadasi<strong></h5>
+<!-- FOOTER -->
+
+<div class="footer">
+  <div class="container">
+
+  <div class="row">
+    <div class="col-lg-12 col-md-12">
+    <h5>Made with<i class="fa fa-heart" aria-hidden="true"></i>by<strong> Katalina Nadasi<strong><h5>
+    </div>
+  </div>
+
   </div>
 </div>
 
-<!--   END CONTACT -->
+
+<!-- END FOOTER -->
+
 
 
 <!-- jquery and boostrap for js -->
