rajout fichiers animation

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My amazing website - Katalina Nadasi</title>
+    <title>Katalina Nadasi</title>
 
 <!-- metatags -->
     <meta name="Katalina's resume" content="Katalina Nadasi says: hey! Take a look on my work!"/>
@@ -39,6 +39,7 @@
 <!-- bootstrap -->
     <link href="css/boostrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
 
     <link rel="stylesheet" type="text/css" href="css/siteDemo.css">
 <!--boostrap style*/ -->
