rajout animations sur toute la page

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -91,12 +91,12 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-          <h1>Welcome</h1>
-          <p>Hey, I'm Katalina Nadasi</p>
-          <p>I'm a Front-End Developer and integrator based in Paris</p>
-          <p>Bootstrap is my best friend and together we build very nice responsive websites</p>
-          <p>I'm also parisian, streetstyle lover, and joy dealer</p>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft">
+          <h1 class="wow fadeIn" data-wow-delay="0.4s">Welcome</h1>
+          <p class="wow fadeIn" data-wow-delay="0.8s">Hey, I'm Katalina Nadasi</p>
+          <p class="wow fadeIn" data-wow-delay="0.8s">I'm a Front-End Developer and integrator based in Paris</p>
+          <p class="wow fadeIn" data-wow-delay="0.9s">Bootstrap is my best friend and together we build very nice responsive websites</p>
+          <p class="wow fadeIn" data-wow-delay="1s">I'm also parisian, streetstyle lover, and joy dealer</p>
           </br></br>
 
           <ul class="list-inline">
@@ -104,7 +104,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" align="center">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 fadeInRight" align="center">
           <img class="img-responsive" src="#.jpg">
 
 
@@ -138,12 +138,12 @@
 
       <div class="row">
 
-      <div class="col-lg-6 col-md-6">
+      <div class="col-lg-6 col-md-6 wow fadeIn" data-wow-delay="0.3s">
         <img src="img/lewagon.jpg" class="img-circle" id="img">
         <blockquote><p><em>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</em></p></blockquote><footer>Le wagon</footer>
       </div>
 
-      <div class="col-lg-6 col-md-6">
+      <div class="col-lg-6 col-md-6 wow fadeIn" data-wow-delay="0.5s">
         <img src="img/escDijon.jpg" id="img">
         <blockquote><p><em>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</em></p></blockquote><footer>ESC Dijon</footer>
       </div>
@@ -169,7 +169,7 @@
       </div>
 
     <div class="row">
-    <div class="col-lg-4 col-md-4">
+    <div class="col-lg-4 col-md-4 wow bounceInLeft">
       <i class="fa fa-cubes fa-3x" aria-hidden="true"></i>
       <h4>Frontend</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
@@ -184,11 +184,11 @@
 
     </div>
 
-    <div class="col-lg-4 col-md-4" align="center">
+    <div class="col-lg-4 col-md-4 wow fadeIn" data-wow-delay="0.2s" align="center">
       <img class="img-responsive" src="img/banner.jpg"/>
     </div>
 
-    <div class="col-lg-4 col-md-4">
+    <div class="col-lg-4 col-md-4 wow bounceInRight">
       <i class="fa fa-camera fa-3x" aria-hidden="true" id="icon3"></i>
       <h4>Product</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
@@ -289,13 +289,13 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.2s">
           <img class="img-responsive" src="img/screenshots/image1.png"/>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.3s">
           <img class="img-responsive" src="img/screenshots/image2.png"/>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.4s">
           <img class="img-responsive" src="img/screenshots/image3.png"/>
         </div>
         </div>
@@ -316,9 +316,9 @@
       <h1>CONTACT</h1>
 
       <ul class="list-inline">
-        <li><a href="mailto:katalina.nadasi@gmail.com" target="blank"><i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/katalina-nadasi-5679b528?trk=hp-identity-name" target="blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a></li>
-        <li><a href="https://github.com/KatalinaNadasi" target="blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></li>
+        <li class="wow fadeIn" data-wow-delay="O.2s"><a href="mailto:katalina.nadasi@gmail.com" target="blank"><i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></a></li>
+        <li class="wow fadeIn" data-wow-delay="O.3s"><a href="https://www.linkedin.com/in/katalina-nadasi-5679b528?trk=hp-identity-name" target="blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a></li>
+        <li class="wow fadeIn" data-wow-delay="O.4s"><a href="https://github.com/KatalinaNadasi" target="blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></li>
 
 
       </ul>
@@ -351,6 +351,11 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+
+ <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
 
   </body>
 </html> 
