--- a/siteDemo.html
+++ b/siteDemo.html
@@ -74,9 +74,12 @@
 
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Resume</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Work</a></li>
+          <li><a href="#studies">Studies</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#certifs">Certifications</a></li>
+          <li><a href="#press">Press</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
 
@@ -119,7 +122,7 @@
 
   <!--   STUDIES -->
 
-  <div class="about">
+  <div class="studies" id="studies">
     <div class="container">
 
       <div class="row">
@@ -158,7 +161,7 @@
 
   <!--   SKILLS -->
 
-  <div class="skills">
+  <div class="skills" id="skills">
     <div class="container">
 
       <div class="row">
@@ -212,7 +215,7 @@
 
   <!--   PRESS -->
 
-  <div class="press">
+  <div class="press" id="certifs">
     <div class="container">
 
       <div class="row">
@@ -240,7 +243,7 @@
       </div>
       </div>
 
-      <div class="row">
+      <div class="row" id="press">
       <div class="col-lg-12 col-md-12">
 
         <h1>Press coverage</h1></br>
@@ -276,7 +279,7 @@
 
   <!-- SCREENSHOTS -->
 
-  <div class="screenshots">
+  <div class="screenshots" id="work">
     <div class="container">
 
       <div class="row">
@@ -308,7 +311,7 @@
 
 <!--   CONTACT -->
 
-<div class="contact">
+<div class="contact" id="contact">
   <div class='container'>
 
     <div class="row">
