rajout icon skills

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -163,20 +163,21 @@
       <div class="row">
       <div class="col-lg-12 col-md-12">
         <h1>SKILLS</h1>
+        <p><em>"I've a passion for design and coding and enjoy creating various sites through HTML, CSS and Javascript, especially Bootstrap sites"</em></p></br></br>
       </div>
       </div>
 
     <div class="row">
     <div class="col-lg-4 col-md-4 wow bounceInLeft">
-      <i class="fa fa-cubes fa-3x" aria-hidden="true"></i>
+      <i class="fa fa-paint-brush fa-3x" aria-hidden="true" aria-hidden="true"></i>
       <h4>Frontend</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
 
-      <i class="fa fa-cloud fa-3x" aria-hidden="true" id="icon1"></i>
+      <i class="fa fa-universal-access fa-3x" aria-hidden="true" id="icon1"></i>
       <h4>Responsive</h4>
       <p>Bootstrap, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
     
-      <i class="fa fa-diamond fa-3x" aria-hidden="true" id="icon2"></i>
+      <i class="fa fa-cubes fa-3x" aria-hidden="true" id="icon2"></i>
       <h4>Backend</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
 
@@ -187,15 +188,15 @@
     </div>
 
     <div class="col-lg-4 col-md-4 wow bounceInRight">
-      <i class="fa fa-camera fa-3x" aria-hidden="true" id="icon3"></i>
+      <i class="fa fa-cloud fa-3x" aria-hidden="true" id="icon3"></i>
       <h4>Product</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
 
-      <i class="fa fa-camera fa-3x" aria-hidden="true" id="icon3"></i>
+      <i class="fa fa-database fa-3x" aria-hidden="true" id="icon3"></i>
       <h4>Database</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magnvel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
 
-      <i class="fa fa-camera fa-3x" aria-hidden="true" id="icon3"></i>
+      <i class="fa fa-git fa-3x" aria-hidden="true" id="icon3"></i>
       <h4>Versioning system</h4>
       <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magnvel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
     </div>
