image profil banière

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -102,16 +102,14 @@
           <p class="wow fadeIn" data-wow-delay="0.8s">Hey, I'm Katalina Nadasi</p>
           <p class="wow fadeIn" data-wow-delay="0.8s">I'm a Front-End Developer and integrator based in Paris</p>
           <p class="wow fadeIn" data-wow-delay="0.9s">Bootstrap is my best friend and together we build very nice responsive websites</p>
-          <p class="wow fadeIn" data-wow-delay="1s">I'm also parisian, streetstyle lover, and joy dealer</p>
-          </br></br>
 
           <ul class="list-inline">
           <li><a href="mailto:katalina.nadasi@gmail.com" target="blank" class="btn btn-trans btn-lg text-center" role="button">LET'S WORK TOGETHER</a></li>
           </ul>
         </div>
 
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 fadeInRight" align="center">
-          <img class="img-responsive" src="#.jpg">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" align="center">
+          <img class="img-responsive" src="pics/bannerIMG.png">
 
 
         </div>
