--- a/siteDemo.html
+++ b/siteDemo.html
@@ -99,9 +99,9 @@
 
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft">
           <h1 class="wow fadeIn" data-wow-delay="0.4s">Welcome</h1>
-          <p class="wow fadeIn" data-wow-delay="0.8s">Hey, I'm Katalina Nadasi</p>
-          <p class="wow fadeIn" data-wow-delay="0.8s">I'm a Front-End Developer and integrator based in Paris</p>
-          <p class="wow fadeIn" data-wow-delay="0.9s">Bootstrap is my best friend and together we build very nice responsive websites</p>
+          <p class="wow fadeIn" data-wow-delay="0.8s">Bonjour. Hello. I'm Katalina Nadasi</p>
+          <p class="wow fadeIn" data-wow-delay="0.8s">I'm a Front-End developer and integrator based in Paris</p>
+          <p class="wow fadeIn" data-wow-delay="0.9s">Bootstrap is my best friend and together we build very nice responsive websites</p></br></br>
 
           <ul class="list-inline">
           <li><a href="mailto:katalina.nadasi@gmail.com" target="blank" class="btn btn-trans btn-lg text-center" role="button">LET'S WORK TOGETHER</a></li>
@@ -110,8 +110,6 @@
 
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" align="center">
           <img class="img-responsive" src="pics/bannerIMG.png">
-
-
         </div>
 
 
@@ -142,7 +140,7 @@
 
       <div class="col-lg-6 col-md-6 wow fadeIn" data-wow-delay="0.5s">
         <img src="img/escDijon.png" class="img-circle" id="img">
-        <blockquote><p><a href="http://www.meilleurs-masters.com/master-management-des-entreprises-culturelles.html"><em>N°3 Master Management des Entreprises Culturelles - Classement SMBG</em></p></a></blockquote><footer>Master Management des Entreprises Créatives</footer>
+        <blockquote><p><a href="http://www.meilleurs-masters.com/master-management-des-entreprises-culturelles.html"><em>N°3 Master Management des Entreprises Culturelles -</br>Classement SMBG</em></p></a></blockquote><footer>Master Management des Entreprises Créatives</footer>
       </div>
 
       </div>
