menage dossiers img

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -25,14 +25,14 @@
     <meta name="twitter:title" content="Katalina Nadasi says: hey! Take a look on my work">
     <meta name="twitter:description" content="Katalina's resume.">
     <meta name="twitter:creator" content="@Ladygravos">
-    <meta name="twitter:image:src" content="pics/http://twitter-card.png">
+    <meta name="twitter:image:src" content="img/twitter-card.png">
 </head>
 
 <!-- Open Graph data -->
     <meta property="og:title" content="Amazing website"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://www.katalinanadasi.com/"/>
-    <meta property="og:image" content="facebook_card.png"/>
+    <meta property="og:image" content="img/facebook_card.png"/>
     <meta property="og:description" content="Hey! Take a look on my work!"/>
   
 <!-- link sheets -->
@@ -109,7 +109,7 @@
         </div>
 
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" align="center">
-          <img class="img-responsive" src="pics/bannerIMG.png">
+          <img class="img-responsive" src="img/bannerIMG.png">
         </div>
 
 
