--- a/siteDemo.html
+++ b/siteDemo.html
@@ -142,7 +142,7 @@
       <div class="col-lg-6 col-md-6 wow fadeIn" data-wow-delay="0.5s">
         <img src="img/escDijon.png" class="img-circle" id="img">
         <h4>Master Management des Entreprises Créatives / ESC Dijon</h4>
-        <blockquote><p><a href="http://www.meilleurs-masters.com/master-management-des-entreprises-culturelles.html"><em>N°3 Master Management des Entreprises Culturelles -</br>Classement SMBG</em></p></a></blockquote><footer>Master Management des Entreprises Créatives</footer>
+        <blockquote><p><a href="http://www.meilleurs-masters.com/master-management-des-entreprises-culturelles.html"><em>N°3 Master Management des Entreprises Culturelles -</br>Classement SMBG</em></p></a></blockquote>
       </div>
 
       </div>
@@ -161,7 +161,7 @@
       <div class="row">
       <div class="col-lg-12 col-md-12">
         <h1>SKILLS</h1>
-        <p><em>"I've a passion for design and coding and enjoy creating various sites through HTML, CSS and Javascript, especially Bootstrap sites"</em></p></br></br>
+        <p><em>I've a passion for design and coding.</br>I enjoy creating various sites through HTML, CSS and Javascript, especially Bootstrap sites</em></p></br></br>
       </div>
       </div>
 
@@ -169,15 +169,15 @@
     <div class="col-lg-4 col-md-4 wow bounceInLeft">
       <i class="fa fa-paint-brush fa-3x" aria-hidden="true" aria-hidden="true"></i>
       <h4>Frontend</h4>
-      <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+      <p>Html5, CSS 3, Javascript et Jquery.<br>Separate stylesheet, latest CSS tricks and techniques to apply great styling.</p>
 
       <i class="fa fa-universal-access fa-3x" aria-hidden="true" id="icon1"></i>
       <h4>Responsive</h4>
-      <p>Bootstrap, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+      <p>Mobile first with Bootstrap.</br>Develop custom and profitable Responsive websites.</p>
     
-      <i class="fa fa-cubes fa-3x" aria-hidden="true" id="icon2"></i>
-      <h4>Backend</h4>
-      <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+      <i class="fa fa-cloud fa-3x" aria-hidden="true" id="icon3"></i>
+      <h4>Product</h4>
+      <p>Strong web marketing skills from my last work. Understand product evolution and the market, launch a product.</p>
 
     </div>
 
@@ -186,9 +186,9 @@
     </div>
 
     <div class="col-lg-4 col-md-4 wow bounceInRight">
-      <i class="fa fa-cloud fa-3x" aria-hidden="true" id="icon3"></i>
-      <h4>Product</h4>
-      <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+      <i class="fa fa-cubes fa-3x" aria-hidden="true" id="icon2"></i>
+      <h4>Backend</h4>
+      <p>Ruby and Rails. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
 
       <i class="fa fa-database fa-3x" aria-hidden="true" id="icon3"></i>
       <h4>Database</h4>
