--- a/siteDemo.html
+++ b/siteDemo.html
@@ -168,15 +168,15 @@
     <div class="row">
     <div class="col-lg-4 col-md-4 wow bounceInLeft">
       <i class="fa fa-paint-brush fa-3x" aria-hidden="true" aria-hidden="true"></i>
-      <h4>Frontend</h4>
+      <h3>Frontend</h3>
       <p>Html5, CSS 3, Javascript et Jquery.<br>Separate stylesheet, latest CSS tricks and techniques to apply great styling.</p>
 
       <i class="fa fa-universal-access fa-3x" aria-hidden="true" id="icon1"></i>
-      <h4>Responsive</h4>
+      <h3>Responsive</h3>
       <p>Mobile first with Bootstrap.</br>Develop custom and profitable Responsive websites.</p>
     
       <i class="fa fa-cloud fa-3x" aria-hidden="true" id="icon3"></i>
-      <h4>Product</h4>
+      <h3>Product</h3>
       <p>Strong web marketing skills from my last work. Understand product evolution and the market, launch a product.</p>
 
     </div>
@@ -187,16 +187,16 @@
 
     <div class="col-lg-4 col-md-4 wow bounceInRight">
       <i class="fa fa-cubes fa-3x" aria-hidden="true" id="icon2"></i>
-      <h4>Backend</h4>
-      <p>Ruby and Rails. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+      <h3>Backend</h3>
+      <p>Basic skills in Ruby and the framwork Rails. Familar with this innovative langage to build strong and creative web apps.</p>
 
       <i class="fa fa-database fa-3x" aria-hidden="true" id="icon3"></i>
-      <h4>Database</h4>
-      <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magnvel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+      <h3>Database</h3>
+      <p>SQL Statements, Views, Keys, Stored Procedures.</p>
 
       <i class="fa fa-git fa-3x" aria-hidden="true" id="icon3"></i>
-      <h4>Versioning system</h4>
-      <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magnvel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+      <h3>Versioning system</h3>
+      <p>Manage files with Git and Github using source control. Create branches and resolve merge conflicts.</p>
     </div>
 
     </div>
