--- a/siteDemo.html
+++ b/siteDemo.html
@@ -182,7 +182,7 @@
     </div>
 
     <div class="col-lg-4 col-md-4 wow fadeIn" data-wow-delay="0.2s" align="center">
-      <img class="img-responsive" src="img/banner.jpg"/>
+      <img class="img-responsive" src="img/banner.png"/>
     </div>
 
     <div class="col-lg-4 col-md-4 wow bounceInRight">
