--- a/siteDemo.html
+++ b/siteDemo.html
@@ -215,8 +215,7 @@
       <div class="row">
       <div class="col-lg-12 col-md-12">
 
-        <h1>Find more on internet</h1>
-        <h1>Certifications</h1></br>
+        </br></br><h1>Certifications</h1></br>
 
       </div>
       </div>
@@ -236,10 +235,12 @@
         </ul>
       </div>
       </div>
+  </div>
+</div>
 
       <div class="row" id="press">
       <div class="col-lg-12 col-md-12">
-
+</br></br></br></br>
         <h1>Press coverage</h1></br>
 
       </div>
