--- a/siteDemo.html
+++ b/siteDemo.html
@@ -317,9 +317,8 @@
         <li class="wow fadeIn" data-wow-delay="O.2s"><a href="mailto:katalina.nadasi@gmail.com" target="blank"><i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></a></li>
         <li class="wow fadeIn" data-wow-delay="O.3s"><a href="https://www.linkedin.com/in/katalina-nadasi-5679b528?trk=hp-identity-name" target="blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a></li>
         <li class="wow fadeIn" data-wow-delay="O.4s"><a href="https://github.com/KatalinaNadasi" target="blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></li>
-
-
       </ul>
+    </div>
 
     </div>
   </div>
@@ -333,7 +332,7 @@
 
   <div class="row">
     <div class="col-lg-12 col-md-12">
-    <h5>Made with<i class="fa fa-heart" aria-hidden="true"></i>by<strong> Katalina Nadasi<strong><h5>
+    <h5>Made with&nbsp;<i class="fa fa-heart" aria-hidden="true"></i>&nbsp;by<strong> Katalina Nadasi<strong><h5>
     </div>
   </div>
 
