--- a/siteDemo.html
+++ b/siteDemo.html
@@ -311,7 +311,7 @@
 
     <div class="row">
     <div class="col-lg-12 col-md-12">
-      <h1>CONTACT</h1>
+      <h1>Let's talk about it !</h1>
 
       <ul class="list-inline">
         <li class="wow fadeIn" data-wow-delay="O.2s"><a href="mailto:katalina.nadasi@gmail.com" target="blank"><i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></a></li>
