--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       <div class="row">
       <div class="col-lg-12 col-md-12">
 
-      <h1>TAKE A LOOK OF MY RECENT WORK</h1>
+      <h1>TAKE A LOOK AT MY RECENT WORK</h1>
       <p>View some of the screenshots from my recent work</p>
 
       </div>
