--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <!-- END HEADER -->
 
-  <!--   STUDIES -->
+  <!--   EDUCATION -->
 
   <div class="studies" id="studies">
     <div class="container">
@@ -127,7 +127,7 @@
 
       <div class="row">
       <div class="col-lg-12 col-md-12">
-        <h1><strong>STUDIES</strong></h1>
+        <h1><strong>EDUCATION</strong></h1>
       </div>
       </div>
 
@@ -151,7 +151,7 @@
   </div>
 
 
-  <!--   END STUDIES -->
+  <!--   END EDUCATION -->
 
   <!--   SKILLS -->
 
