--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft">
           <h1 class="wow fadeIn" data-wow-delay="0.4s">Welcome</h1>
           <p class="wow fadeIn" data-wow-delay="0.8s">I'm Katalina Nadasi</p>
-          <p class="wow fadeIn" data-wow-delay="0.8s">I'm a Front-End developer and integrator based in Paris</p>
+          <p class="wow fadeIn" data-wow-delay="0.8s">I'm a Front-End developer and integrator </br>based in Paris</p>
           <p class="wow fadeIn" data-wow-delay="0.9s">Bootstrap is my best friend and together we build very nice responsive websites</p></br></br></br>
 
           <ul class="list-inline">
@@ -187,15 +187,15 @@
 
     <div class="col-lg-4 col-md-4 wow bounceInRight">
       <i class="fa fa-cubes fa-3x" aria-hidden="true" id="icon2"></i>
-      <h3>Backend</h3>
+      </br><h3>Backend</h3>
       <p>Basic skills in Ruby and the framwork Rails. Familar with this innovative langage to build strong and creative web apps.</p>
 
       <i class="fa fa-database fa-3x" aria-hidden="true" id="icon3"></i>
       <h3>Database</h3>
       <p>SQL Statements, Views, Keys, Stored Procedures.</p>
 
-      <i class="fa fa-git fa-3x" aria-hidden="true" id="icon3"></i>
-      <h3>Versioning system</h3>
+      <i class="fa fa-code-fork fa-3x" aria-hidden="true" id="icon3"></i>
+      </br></br><h3>Versioning system</h3>
       <p>Manage files with Git and Github using source control. Create branches and resolve merge conflicts.</p>
     </div>
 
