--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <!--     [if lt IE 9] -->
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
+    <script type="text/javascript" src="siteDemoKat.js"></script>
 <!--     [endif] -->
 
 
@@ -72,6 +74,9 @@
         </button>
 
         <a href="#"><img src="img/logonavbar.png" alt="logo" class="img-responsive" id="logo"></a>
+        <script src="script/jquery.js" type="text/javascript"></script>
+        <script src="script/background.js" type="text/javascript">
+        </script> 
 
       </div>
 
