--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <script type="text/javascript" src="siteDemoKat.js"></script>
 <!--     [endif] -->
 
-
-    <meta name="viewport" content="width = device-width, initial-scale=1.0">
+    <meta name='viewport' content='user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1'>
 
 <!-- <!- Twitter Card data -->
     <head>
@@ -82,12 +81,12 @@
 
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#studies">Studies</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#certifications">Certifications</a></li>
-          <li><a href="#press">Press</a></li>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#studies">EDUCATION</a></li>
+          <li><a href="#skills">SKILLS</a></li>
+          <li><a href="#certifications">CERTIFICATIONS</a></li>
+          <li><a href="#press">PRESS</a></li>
+          <li><a href="#work">WORK</a></li>
+          <li><a href="#contact">CONTACT</a></li>
         </ul>
       </div>
 
@@ -109,7 +108,7 @@
           <p class="wow fadeIn" data-wow-delay="0.9s">Bootstrap is my best friend and together we build very nice responsive websites</p></br></br></br>
 
           <ul class="list-inline">
-          <li><a href="mailto:katalina.nadasi@gmail.com" target="blank" class="btn btn-trans btn-lg text-center" role="button">LET'S WORK TOGETHER</a></li>
+          <li><a href="#work" class="btn btn-trans btn-lg text-center" role="button">LET'S WORK TOGETHER</a></li>
           </ul>
         </div>
 
