--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
 
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" align="center">
-          <img class="img-responsive" src="img/bannerIMG.png">
+          <a href="#studies"><img class="img-responsive" src="img/bannerIMG.png"></a>
         </div>
 
 
@@ -192,7 +192,7 @@
     <div class="col-lg-4 col-md-4 wow bounceInRight">
       <i class="fa fa-cubes fa-3x" aria-hidden="true" id="icon2"></i>
       </br><h3>Backend</h3>
-      <p>Basic skills in Ruby and the framwork Rails. Familar with this innovative langage to build strong and creative web apps.</p>
+      <p>Basic skills in Ruby and the framework Rails. Familiar with this innovative langage to build strong and creative web apps.</p>
 
       <i class="fa fa-database fa-3x" aria-hidden="true" id="icon3"></i>
       <h3>Database</h3>
